ingress/gateway.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: homelab
  namespace: nginx-gateway
spec:
  gatewayClassName: nginx
  infrastructure:
    annotations:
      external-mdns.blakecovarrubias.com/hostnames: homelab, tavern, argocd, grafana, victoria
      metallb.io/ip-allocated-from-pool: homelab-pool
      metallb.io/allow-shared-ip: "homelab-pool"
    parametersRef:
      group: gateway.nginx.org
      kind: NginxProxy
      name: ngf-proxy-config
  listeners:
  - name: http
    port: 80
    protocol: HTTP
    allowedRoutes:
      namespaces:
        from: All
  - name: https
    port: 443
    protocol: HTTPS
    allowedRoutes:
      namespaces:
        from: All
    tls:
      mode: Terminate
      certificateRefs:
      - name: tls-key-pair
        kind: Secret
        namespace: nginx-gateway
