ingress/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: argocd
  namespace: argocd
spec:
  parentRefs:
  - name: nginx-gateway
    namespace: nginx-gateway
    group: gateway.networking.k8s.io	
    kind: Gateway
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /argocd
    backendRefs:
    - name: argocd-server
      port: 80
      group: ''	
      kind: Service
---
apiVersion: gateway.networking.k8s.io/v1
kind: GRPCRoute
metadata:
  name: argocd-grpc
  namespace: argocd
spec:
  parentRefs:
  - name: homelab
    namespace: nginx-gateway
    group: gateway.networking.k8s.io	
    kind: Gateway
  rules:
  - backendRefs:
    - name: argocd-server
      port: 80
      group: ''	
      kind: Service
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: http-filter-redirect
  namespace: nginx-gateway
spec:
  parentRefs:
  - name: homelab
    namespace: nginx-gateway
    group: gateway.networking.k8s.io	
    kind: Gateway
  rules:
  - filters:
    - type: RequestRedirect
      requestRedirect:
        scheme: https
        statusCode: 301
